--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem sou eu</title>
+    <link rel="shortcut icon" type="image/x-icon" href="joy soy.png">
 </head>
 <body>
     <section>
