--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem sou eu</title>
-    <link rel="shortcut icon" type="image/x-icon" href="joy soy.png">
+    <title>tecnologia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <title>nickname</title>
+    <section class="descricao">
+        <h1><b>Quem seria eu!?</b></h1>
+        <h2><I>Gadgets: Tecnologia de bolso que facilita a vida!</I></h2>
     </section>
-</body>
-</html>
+
+    <section class="secao">
+        <div class="imagem">
+            <img src="vr.jpeg" alt="soja bem cuidada sendo criada">
+            <img src="robos.jpeg" alt=" soja depois de todo o tratamento ">
+        </div>
+
+        <div class="texto">
+            <h3>GADGETS</h3>
+            <p>
+                Gadgets: pequenos no tamanho, gigantes em função. Eles transformam tarefas diárias, conectam e divertem.
+                Smartwatches e fones de ouvido sem fio provam: inovação na palma da mão, tornando a vida prática e
+                conectada.
+            </p>
+
+        </div>
+
+        <div class="texto">
+            <h1>Robôs</h1>
+
+            <p>Robôs humanoides: máquinas que imitam o ser humano com inteligência artificial avançada. Do chão de
+                fábrica à exploração espacial, eles transformam nosso mundo, levantando questões cruciais sobre o futuro
+                da nossa convivência.</p>
+
+
+        </div>
+    </section>
