--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
 
 <body>
     <section class="descricao">
-        <h1><b>Quem seria eu!?</b></h1>
+        <h1><b>Quem sou eu!?</b></h1>
         <h2><I>Gadgets: Tecnologia de bolso que facilita a vida!</I></h2>
     </section>
 
     <section class="secao">
         <div class="imagem">
-            <img src="vr.jpeg" alt="soja bem cuidada sendo criada">
-            <img src="robos.jpeg" alt=" soja depois de todo o tratamento ">
+            <img src="1.jpg" alt="eu arrumado">
         </div>
 
         <div class="texto">
-            <h3>GADGETS</h3>
-            <p>
-                Gadgets: pequenos no tamanho, gigantes em função. Eles transformam tarefas diárias, conectam e divertem.
-                Smartwatches e fones de ouvido sem fio provam: inovação na palma da mão, tornando a vida prática e
-                conectada.
-            </p>
+            <h3> Quem sou eu? do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
+                tentando ser cada vez melhor, para dar orgulho e eu coneguir o sucesso da minha vida para meu futuro ser
+                melhor que ontem,sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai algum dia volta.
+
+                </p>
 
         </div>
 
