--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
         </div>
 
         <div class="texto">
-            <h3> Quem sou eu? do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
+            <h3> Quem Sou Eu?</h3>  <p> do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
                 tentando ser cada vez melhor, para dar orgulho e eu coneguir o sucesso da minha vida para meu futuro ser
                 melhor que ontem,sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai algum dia volta.
-
                 </p>
 
         </div>
 
         <div class="texto">
-            <h1>Robôs</h1>
+            <h1>Quem quero ser</h1>
 
-            <p>Robôs humanoides: máquinas que imitam o ser humano com inteligência artificial avançada. Do chão de
-                fábrica à exploração espacial, eles transformam nosso mundo, levantando questões cruciais sobre o futuro
-                da nossa convivência.</p>
+            <p>
+
+            </p>
 
 
         </div>
