--- a/index.html
+++ b/index.html
@@ -20,10 +20,24 @@
         </div>
 
         <div class="texto">
-            <h3> Quem Sou Eu?</h3>  <p> do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
-                tentando ser cada vez melhor, para dar orgulho e eu coneguir o sucesso da minha vida para meu futuro ser
-                melhor que ontem,sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai algum dia volta.
-                </p>
+            <h3>  </h3>
+            <p> 
+            </p>
+
+        </div>
+
+        <div class="texto">
+            <h3> Quem Sou Eu?</h3>
+            <p> do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
+                tentando ser cada vez melhor, para dar orgulho é coneguir o sucesso da minha vida para meu futuro ser
+                melhor que ontem, sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai
+                algum dia volta, tenho dois pais incriveis uma mulher chamada fabiana aparecida silverio, e um pai
+                incrivel chamado Junior Batista Rodrigues,são dois melhores pais incrivei maravilhoso sempre que preciso
+                de ajuda de algum dos dois da algum jeito incrivel de me ajudar, tenho mais 2 irmão la em casa somos em
+                5 meu pai, minha mãe, vitor hugo meu irmão do meio eo gutavo meu irmão mais novos que são tudo oq eu
+                pedi de mais precioso dou minha vida para ver eles sempre muito felizes com pouca coisa eles ja ficam
+                muito felizes melhores irmão do MUNDO...
+            </p>
 
         </div>
 
