--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="texto">
-            <h3> Quem Sou Eu?</h3>
+            <h3> Nicolas</h3>
             <p> do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
                 tentando ser cada vez melhor, para dar orgulho é coneguir o sucesso da minha vida para meu futuro ser
                 melhor que ontem, sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai
