--- a/index.html
+++ b/index.html
@@ -20,15 +20,33 @@
 
         <div class="texto">
             <h3> Nicolas</h3>
-            <p> do ponto de vista de alguns, um moleque estranho, que quer se torna o exemplo da familia
-                tentando ser cada vez melhor, para dar orgulho é coneguir o sucesso da minha vida para meu futuro ser
-                melhor que ontem, sou muito amigo, me dou bem com todos ajudo todos porque acredito que tudo que vai
-                algum dia volta, tenho dois pais incriveis uma mulher chamada fabiana aparecida silverio, e um pai
-                incrivel chamado Junior Batista Rodrigues,são dois melhores pais incrivei maravilhoso sempre que preciso
-                de ajuda de algum dos dois da algum jeito incrivel de me ajudar, tenho mais 2 irmão la em casa somos em
-                5 meu pai, minha mãe, vitor hugo meu irmão do meio eo gutavo meu irmão mais novos que são tudo oq eu
-                pedi de mais precioso dou minha vida para ver eles sempre muito felizes com pouca coisa eles ja ficam
-                muito felizes melhores irmão do MUNDO...
+
+            <h3>Quem sou eu?</h3>
+            <p> Do ponto de vista de alguns, sou um moleque estranho, mas meu maior desejo é me tornar um exemplo para a
+                minha família. Tento ser melhor a cada dia, e meu maior objetivo é dar orgulho a eles, alcançando o
+                sucesso na vida e sendo uma pessoa melhor hoje do que fui ontem. Sou muito amigo e me dou bem com todos;
+                ajudo as pessoas porque acredito que tudo o que vai, volta.
+
+                Tenho dois pais incríveis: uma mulher chamada Fabiana Aparecida Silverio e um homem chamado Junior
+                Batista Rodrigues. Eles são os melhores e mais maravilhosos pais do mundo. Sempre que preciso de ajuda,
+                eles dão um jeito incrível de me apoiar. Em casa, somos cinco: meu pai, minha mãe e meus dois irmãos,
+                Vitor Hugo e Gustavo. Eles são tudo de mais precioso que eu poderia pedir. Eu dou a minha vida para
+                vê-los sempre muito felizes, e com pouca coisa eles já se sentem assim. Eles são os melhores irmãos do
+                MUNDO.
+
+            <h3>Meu dia a dia</h3>
+
+            No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
+            muitas amizades. Sou goleiro e, na minha opinião, jogo bem, mas sei que existem pessoas que se destacam
+            muito. Isso é bom, pois já tive o sonho de ser jogador de futebol profissional, mas as coisas nem sempre
+            saem como a gente quer. Ninguém disse que seria fácil. O que me motiva a continuar a jogar são meu pai e
+            minha mãe, e quem me inspira é o Neymar da Silva Santos Júnior.
+
+            Esse cara joga demais! Se fosse para fazer uma redação sobre mim, eu não saberia, mas se fosse sobre
+            ele, eu escreveria mais de 300 palavras sem problema. Ele me inspira com sua força de vontade e seu
+            desejo de vencer. Ele nunca desiste, mesmo machucado, ele persiste em continuar, e é isso que me mantém
+            e me faz seguir em frente.
+
             </p>
 
         </div>
