--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <h3>Meu dia a dia</h3>
 
-            No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
+           <p class="texto2">No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
             muitas amizades. Sou goleiro e, na minha opinião, jogo bem, mas sei que existem pessoas que se destacam
             muito. Isso é bom, pois já tive o sonho de ser jogador de futebol profissional, mas as coisas nem sempre
             saem como a gente quer. Ninguém disse que seria fácil. O que me motiva a continuar a jogar são meu pai e
@@ -46,7 +46,7 @@
             Esse cara joga demais! Se fosse para fazer uma redação sobre mim, eu não saberia, mas se fosse sobre
             ele, eu escreveria mais de 300 palavras sem problema. Ele me inspira com sua força de vontade e seu
             desejo de vencer. Ele nunca desiste, mesmo machucado, ele persiste em continuar, e é isso que me mantém
-            e me faz seguir em frente.
+            e me faz seguir em frente.</p> 
 
             </p>
 
