--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
 
             <h3>Quem sou eu?</h3>
 
-            <p> Do ponto de vista de alguns, sou um moleque estranho, mas meu maior desejo é me tornar um exemplo para a
+            <p>   Do ponto de vista de alguns, sou um moleque estranho, mas meu maior desejo é me tornar um exemplo para a
                 minha família. Tento ser melhor a cada dia, e meu maior objetivo é dar orgulho a eles, alcançando o
                 sucesso na vida e sendo uma pessoa melhor hoje do que fui ontem. Sou muito amigo e me dou bem com todos;
                 ajudo as pessoas porque acredito que tudo o que vai, volta.
 
-                Tenho dois pais incríveis: uma mulher chamada Fabiana Aparecida Silverio e um homem chamado Junior
+                  Tenho dois pais incríveis: uma mulher chamada Fabiana Aparecida Silverio e um homem chamado Junior
                 Batista Rodrigues. Eles são os melhores e mais maravilhosos pais do mundo. Sempre que preciso de ajuda,
                 eles dão um jeito incrível de me apoiar. Em casa, somos cinco: meu pai, minha mãe e meus dois irmãos,
                 Vitor Hugo e Gustavo. Eles são tudo de mais precioso que eu poderia pedir. Eu dou a minha vida para
                 vê-los sempre muito felizes, e com pouca coisa eles já se sentem assim. Eles são os melhores irmãos do
-                MUNDO.
+                MUNDO.  </p>
 
             <h3>Meu dia a dia</h3>
 
-           <p class="texto2">No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
+           <p class="texto2">  No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
             muitas amizades. Sou goleiro e, na minha opinião, jogo bem, mas sei que existem pessoas que se destacam
             muito. Isso é bom, pois já tive o sonho de ser jogador de futebol profissional, mas as coisas nem sempre
             saem como a gente quer. Ninguém disse que seria fácil. O que me motiva a continuar a jogar são meu pai e
             minha mãe, e quem me inspira é o Neymar da Silva Santos Júnior.
 
-            Esse cara joga demais! Se fosse para fazer uma redação sobre mim, eu não saberia, mas se fosse sobre
+              Esse cara joga demais! Se fosse para fazer uma redação sobre mim, eu não saberia, mas se fosse sobre
             ele, eu escreveria mais de 300 palavras sem problema. Ele me inspira com sua força de vontade e seu
             desejo de vencer. Ele nunca desiste, mesmo machucado, ele persiste em continuar, e é isso que me mantém
             e me faz seguir em frente.</p> 
 
-            </p>
+           
 
         </div>
 
