--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 vê-los sempre muito felizes, e com pouca coisa eles já se sentem assim. Eles são os melhores irmãos do
                 MUNDO.  </p>
 
+                <div class="texto2">
             <h3>Meu dia a dia</h3>
 
-           <p class="texto2">  No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
+           <p>  No meu dia a dia, costumo jogar futebol. Faço parte de um time da minha cidade e, jogando nele, fiz
             muitas amizades. Sou goleiro e, na minha opinião, jogo bem, mas sei que existem pessoas que se destacam
             muito. Isso é bom, pois já tive o sonho de ser jogador de futebol profissional, mas as coisas nem sempre
             saem como a gente quer. Ninguém disse que seria fácil. O que me motiva a continuar a jogar são meu pai e
@@ -47,7 +48,7 @@
             ele, eu escreveria mais de 300 palavras sem problema. Ele me inspira com sua força de vontade e seu
             desejo de vencer. Ele nunca desiste, mesmo machucado, ele persiste em continuar, e é isso que me mantém
             e me faz seguir em frente.</p> 
-
+            </div>
            
 
         </div>
